# ai-weather-report

./: .gitignore  README.md  ai-weather-report  pyproject.toml
docs/superpowers/specs/: 2026-06-20-cross-report-event-dedup-design.md
src/ai_weather_report/: __init__.py  __main__.py  cache.py  cli.py  config.py  daemon.py  llm.py  pipeline.py  player.py  reports.py
src/ai_weather_report/tui/: __init__.py  app.py  app.tcss  feed_tab.py  reports_tab.py
src/ai_weather_report/tui/screens/: __init__.py  article_detail.py  config_screen.py  feed_list.py  main_menu.py  report_detail.py  reports_list.py
tests/: test_event_dedup.py  test_report_selection.py
